# rmsd

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  c6h7-int1-xz.txt  c6h7-int2-t.txt  calculate_rmsd  calculate_rmsd.py  calculate_rmsd_test.py  ci_categorizer.py  environment.yml  ethane_far.xyz  ethane_translate.xyz  example.py  kabsch.py  pyproject.toml  pyrightconfig.json  requirements.dev.txt  requirements.txt  setup.py  tests.py
.github/workflows/: publish.yml  test.yml
docs/notebooks/: coord_funcs.py
examples/: SF2HClBrI-a.txt  SF2HClBrI-b-nxnz.txt  SF2HClBrI-nxnz.txt  SF2HClBrI-nyz.txt  SF2HClBrI-xz.txt  SF2HClBrI-yz.txt
notebooks/: coord_funcs.py  explain_reorder.ipynb  figures.ipynb  notes.ipynb  plot_funcs.py
rmsd/: __init__.py  __main__.py  calculate_rmsd.py  calculate_rmsd_test.py
rmsd++/: Makefile  README.md  kabsch.h  main.cpp  rmsd.cpp
tests/: SF2HClBrI-a.xyz  SF2HClBrI-nxnz.xyz  SF2HClBrI-nyz.xyz  c6h7-int1-a.xyz  conftest.py  constants.py  context.py  ethane.xyz  ethane_mini.xyz  lower_case_conformer_1.xyz  lower_case_conformer_2.xyz  test_args.py  test_centroid.py  test_file_reading.py  test_kabsch.py  test_kabsch_weighted.py  test_main.py  test_no_hydrogen_print.py  test_pdb.py  test_quaternion.py  test_reflections.py  test_reorder.py  test_reorder_inertia.py  test_reorder_print.py  test_reorder_qml.py  tests_reflections.py  water_16.xyz  water_16_idx.xyz  water_swapped.xyz
tests/resources/: CHEMBL3039407.xyz  CHEMBL3039407_order.xyz  SF2HClBrI-a.xyz  SF2HClBrI-b-nxnz.xyz  (+14 more)
(+9 files in other folders)
